--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "vitest --dom",
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
@@ -21,9 +22,13 @@
   "devDependencies": {
     "@quasar/vite-plugin": "^1.3.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.3.0",
+    "happy-dom": "^8.9.0",
+    "mock-apollo-client": "^1.2.1",
     "sass": "^1.32.12",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vitest": "^0.29.2",
     "vue-tsc": "^1.0.24"
   }
 }
